Remove the white margine issue on mobile devices
 Please enter the commit message for your changes. Lines starting
 with '#' will be ignored, and an empty message aborts the commit.

 On branch main
 Your branch is up to date with 'origin/main'.

 Changes to be committed:
	modified:   src/components/Foot.jsx
	modified:   src/components/Top.css

--- a/src/components/Top.css
+++ b/src/components/Top.css
@@ -12,7 +12,8 @@ body {
   margin: 0;
   padding: 0;
   width: 100%;
-  height: 100vh;
+  /* height: 100vh; */
+  height: 100dvh;
   display: 'flex',
 }
 
@@ -35,6 +36,7 @@ body {
     grid-template-rows: repeat(5, 1fr);
     gap: 2px;
     background-color: #000000;
+    color: #020887;
 }
     
 .foot1 {
@@ -49,7 +51,6 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    
     padding-left: 10px;
     padding-right: 10px;
     grid-column: span 3 / span 3;
@@ -63,7 +64,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    
+
     padding-left: 10px;
     padding-right: 10px;
     grid-column: span 3 / span 3;
@@ -74,7 +75,7 @@ body {
 }
 
 .foota {
-  color: black;
+  color: #020887;
 }
 
 
